--- a/docs/doc/components/boiler.html
+++ b/docs/doc/components/boiler.html
@@ -35,6 +35,7 @@
   <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
+    <link rel="next" title="Running Plant Under Simulation" href="../simulation/index.html" />
     <link rel="prev" title="Room Temperature" href="room.html" /> 
 </head>
 
@@ -168,6 +169,7 @@
 <li class="toctree-l2"><a class="reference internal" href="../misc/gh-pages/index.html">Using Github Pages</a><ul>
 <li class="toctree-l3"><a class="reference internal" href="../misc/gh-pages/index.html#create-site-publication-repo">Create “Site Publication Repo”</a></li>
 <li class="toctree-l3"><a class="reference internal" href="../misc/gh-pages/index.html#configure-github-pages-for-jfasch-openheating-pages">Configure Github Pages for <code class="file docutils literal notranslate"><span class="pre">jfasch/openheating-pages</span></code></a></li>
+<li class="toctree-l3"><a class="reference internal" href="../misc/gh-pages/index.html#time-for-deployment">Time for Deployment</a></li>
 </ul>
 </li>
 </ul>
@@ -188,7 +190,7 @@
 </ul>
 </li>
 </ul>
-<p class="caption"><span class="caption-text">Source Code</span></p>
+<p class="caption"><span class="caption-text">Development</span></p>
 <ul class="current">
 <li class="toctree-l1"><a class="reference internal" href="../github.html">Getting the Source</a></li>
 <li class="toctree-l1 current"><a class="reference internal" href="index.html">Components</a><ul class="current">
@@ -223,6 +225,8 @@
 <li class="toctree-l2 current"><a class="current reference internal" href="#">Warm Water</a></li>
 </ul>
 </li>
+<li class="toctree-l1"><a class="reference internal" href="../simulation/index.html">Running Plant Under Simulation</a></li>
+<li class="toctree-l1"><a class="reference internal" href="../unittests/index.html">Running Unittests</a></li>
 </ul>
 
             
@@ -316,6 +320,8 @@
           <footer>
   
     <div class="rst-footer-buttons" role="navigation" aria-label="footer navigation">
+      
+        <a href="../simulation/index.html" class="btn btn-neutral float-right" title="Running Plant Under Simulation" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right"></span></a>
       
       
         <a href="room.html" class="btn btn-neutral float-left" title="Room Temperature" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left"></span> Previous</a>
