--- a/docs/doc/components/index.html
+++ b/docs/doc/components/index.html
@@ -169,6 +169,7 @@
 <li class="toctree-l2"><a class="reference internal" href="../misc/gh-pages/index.html">Using Github Pages</a><ul>
 <li class="toctree-l3"><a class="reference internal" href="../misc/gh-pages/index.html#create-site-publication-repo">Create “Site Publication Repo”</a></li>
 <li class="toctree-l3"><a class="reference internal" href="../misc/gh-pages/index.html#configure-github-pages-for-jfasch-openheating-pages">Configure Github Pages for <code class="file docutils literal notranslate"><span class="pre">jfasch/openheating-pages</span></code></a></li>
+<li class="toctree-l3"><a class="reference internal" href="../misc/gh-pages/index.html#time-for-deployment">Time for Deployment</a></li>
 </ul>
 </li>
 </ul>
@@ -189,7 +190,7 @@
 </ul>
 </li>
 </ul>
-<p class="caption"><span class="caption-text">Source Code</span></p>
+<p class="caption"><span class="caption-text">Development</span></p>
 <ul class="current">
 <li class="toctree-l1"><a class="reference internal" href="../github.html">Getting the Source</a></li>
 <li class="toctree-l1 current"><a class="current reference internal" href="#">Components</a><ul>
@@ -224,6 +225,8 @@
 <li class="toctree-l2"><a class="reference internal" href="boiler.html">Warm Water</a></li>
 </ul>
 </li>
+<li class="toctree-l1"><a class="reference internal" href="../simulation/index.html">Running Plant Under Simulation</a></li>
+<li class="toctree-l1"><a class="reference internal" href="../unittests/index.html">Running Unittests</a></li>
 </ul>
 
             
