more fancy stuff

--- a/docs/doc/components/architecture.html
+++ b/docs/doc/components/architecture.html
@@ -8,7 +8,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <title>OpenHeating Presentation Ideas &mdash; openheating 0.0.0 documentation</title>
+  <title>Architectural Overview &mdash; openheating 0.0.0 documentation</title>
   
 
   
@@ -35,8 +35,8 @@
   <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Miscellaneous Documentation" href="../misc/index.html" />
-    <link rel="prev" title="GLT2020 “Blink” Presentation Screenplay" href="glt2020/blink/Screenplay.html" /> 
+    <link rel="next" title="org.openheating.Main" href="main.html" />
+    <link rel="prev" title="Components" href="index.html" /> 
 </head>
 
 <body class="wy-body-for-nav">
@@ -81,7 +81,7 @@
             
             
               <p class="caption"><span class="caption-text">Documentation</span></p>
-<ul class="current">
+<ul>
 <li class="toctree-l1"><a class="reference internal" href="../install/index.html">Installation</a><ul>
 <li class="toctree-l2"><a class="reference internal" href="../install/dependencies.html">Dependencies</a><ul>
 <li class="toctree-l3"><a class="reference internal" href="../install/dependencies.html#dbus-pydbus">DBus: pydbus</a></li>
@@ -133,22 +133,22 @@
 <li class="toctree-l2"><a class="reference internal" href="../faschingbauer/electrics.html">Unsorted Electrical Things</a></li>
 </ul>
 </li>
-<li class="toctree-l1 current"><a class="reference internal" href="index.html">Marketing</a><ul class="current">
-<li class="toctree-l2"><a class="reference internal" href="glt2020/index.html">Grazer Linuxtage 2020</a><ul>
-<li class="toctree-l3"><a class="reference internal" href="glt2020/blink.html">CfP</a><ul>
-<li class="toctree-l4"><a class="reference internal" href="glt2020/blink.html#cv">CV</a></li>
-<li class="toctree-l4"><a class="reference internal" href="glt2020/blink.html#abstract">Abstract</a></li>
-<li class="toctree-l4"><a class="reference internal" href="glt2020/blink.html#topics">Topics</a></li>
-<li class="toctree-l4"><a class="reference internal" href="glt2020/blink.html#use-case">Use Case</a></li>
+<li class="toctree-l1"><a class="reference internal" href="../marketing/index.html">Marketing</a><ul>
+<li class="toctree-l2"><a class="reference internal" href="../marketing/glt2020/index.html">Grazer Linuxtage 2020</a><ul>
+<li class="toctree-l3"><a class="reference internal" href="../marketing/glt2020/blink.html">CfP</a><ul>
+<li class="toctree-l4"><a class="reference internal" href="../marketing/glt2020/blink.html#cv">CV</a></li>
+<li class="toctree-l4"><a class="reference internal" href="../marketing/glt2020/blink.html#abstract">Abstract</a></li>
+<li class="toctree-l4"><a class="reference internal" href="../marketing/glt2020/blink.html#topics">Topics</a></li>
+<li class="toctree-l4"><a class="reference internal" href="../marketing/glt2020/blink.html#use-case">Use Case</a></li>
 </ul>
 </li>
-<li class="toctree-l3"><a class="reference internal" href="glt2020/blink/Screenplay.html">GLT2020 “Blink” Presentation Screenplay</a><ul>
-<li class="toctree-l4"><a class="reference internal" href="glt2020/blink/Screenplay.html#asyncio-basics"><cite>asyncio</cite> Basics</a></li>
+<li class="toctree-l3"><a class="reference internal" href="../marketing/glt2020/blink/Screenplay.html">GLT2020 “Blink” Presentation Screenplay</a><ul>
+<li class="toctree-l4"><a class="reference internal" href="../marketing/glt2020/blink/Screenplay.html#asyncio-basics"><cite>asyncio</cite> Basics</a></li>
 </ul>
 </li>
 </ul>
 </li>
-<li class="toctree-l2 current"><a class="current reference internal" href="#">OpenHeating Presentation Ideas</a></li>
+<li class="toctree-l2"><a class="reference internal" href="../marketing/heating.html">OpenHeating Presentation Ideas</a></li>
 </ul>
 </li>
 <li class="toctree-l1"><a class="reference internal" href="../misc/index.html">Miscellaneous Documentation</a><ul>
@@ -199,41 +199,41 @@
 </li>
 </ul>
 <p class="caption"><span class="caption-text">Development</span></p>
-<ul>
+<ul class="current">
 <li class="toctree-l1"><a class="reference internal" href="../github.html">Getting the Source</a></li>
-<li class="toctree-l1"><a class="reference internal" href="../components/index.html">Components</a><ul>
-<li class="toctree-l2"><a class="reference internal" href="../components/architecture.html">Architectural Overview</a><ul>
-<li class="toctree-l3"><a class="reference internal" href="../components/architecture.html#polling">Polling</a></li>
+<li class="toctree-l1 current"><a class="reference internal" href="index.html">Components</a><ul class="current">
+<li class="toctree-l2 current"><a class="current reference internal" href="#">Architectural Overview</a><ul>
+<li class="toctree-l3"><a class="reference internal" href="#polling">Polling</a></li>
 </ul>
 </li>
-<li class="toctree-l2"><a class="reference internal" href="../components/main.html"><code class="docutils literal notranslate"><span class="pre">org.openheating.Main</span></code></a><ul>
-<li class="toctree-l3"><a class="reference internal" href="../components/main.html#source">Source</a></li>
-<li class="toctree-l3"><a class="reference internal" href="../components/main.html#description">Description</a></li>
-<li class="toctree-l3"><a class="reference internal" href="../components/main.html#sample-configuration-file">Sample Configuration File</a></li>
+<li class="toctree-l2"><a class="reference internal" href="main.html"><code class="docutils literal notranslate"><span class="pre">org.openheating.Main</span></code></a><ul>
+<li class="toctree-l3"><a class="reference internal" href="main.html#source">Source</a></li>
+<li class="toctree-l3"><a class="reference internal" href="main.html#description">Description</a></li>
+<li class="toctree-l3"><a class="reference internal" href="main.html#sample-configuration-file">Sample Configuration File</a></li>
 </ul>
 </li>
-<li class="toctree-l2"><a class="reference internal" href="../components/thermometers.html">Thermometers</a><ul>
-<li class="toctree-l3"><a class="reference internal" href="../components/thermometers.html#objects-provided">Objects Provided</a></li>
-<li class="toctree-l3"><a class="reference internal" href="../components/thermometers.html#sample-configuration-file">Sample Configuration File</a></li>
+<li class="toctree-l2"><a class="reference internal" href="thermometers.html">Thermometers</a><ul>
+<li class="toctree-l3"><a class="reference internal" href="thermometers.html#objects-provided">Objects Provided</a></li>
+<li class="toctree-l3"><a class="reference internal" href="thermometers.html#sample-configuration-file">Sample Configuration File</a></li>
 </ul>
 </li>
-<li class="toctree-l2"><a class="reference internal" href="../components/switches.html"><code class="docutils literal notranslate"><span class="pre">org.openheating.Switches</span></code></a><ul>
-<li class="toctree-l3"><a class="reference internal" href="../components/switches.html#source">Source</a></li>
-<li class="toctree-l3"><a class="reference internal" href="../components/switches.html#description">Description</a></li>
-<li class="toctree-l3"><a class="reference internal" href="../components/switches.html#sample-configuration-file">Sample Configuration File</a></li>
+<li class="toctree-l2"><a class="reference internal" href="switches.html"><code class="docutils literal notranslate"><span class="pre">org.openheating.Switches</span></code></a><ul>
+<li class="toctree-l3"><a class="reference internal" href="switches.html#source">Source</a></li>
+<li class="toctree-l3"><a class="reference internal" href="switches.html#description">Description</a></li>
+<li class="toctree-l3"><a class="reference internal" href="switches.html#sample-configuration-file">Sample Configuration File</a></li>
 </ul>
 </li>
-<li class="toctree-l2"><a class="reference internal" href="../components/circuits.html"><code class="docutils literal notranslate"><span class="pre">org.openheating.Circuits</span></code></a><ul>
-<li class="toctree-l3"><a class="reference internal" href="../components/circuits.html#source">Source</a></li>
-<li class="toctree-l3"><a class="reference internal" href="../components/circuits.html#description">Description</a></li>
-<li class="toctree-l3"><a class="reference internal" href="../components/circuits.html#sample-configuration-file">Sample Configuration File</a></li>
+<li class="toctree-l2"><a class="reference internal" href="circuits.html"><code class="docutils literal notranslate"><span class="pre">org.openheating.Circuits</span></code></a><ul>
+<li class="toctree-l3"><a class="reference internal" href="circuits.html#source">Source</a></li>
+<li class="toctree-l3"><a class="reference internal" href="circuits.html#description">Description</a></li>
+<li class="toctree-l3"><a class="reference internal" href="circuits.html#sample-configuration-file">Sample Configuration File</a></li>
 </ul>
 </li>
-<li class="toctree-l2"><a class="reference internal" href="../components/oil.html">Oil Burner Control</a></li>
-<li class="toctree-l2"><a class="reference internal" href="../components/wood.html">Wood Oven Control</a></li>
-<li class="toctree-l2"><a class="reference internal" href="../components/room.html">Room Temperature</a></li>
-<li class="toctree-l2"><a class="reference internal" href="../components/boiler.html">Warm Water</a></li>
-<li class="toctree-l2"><a class="reference internal" href="../components/dbus-objects.html">D-Bus Objects</a></li>
+<li class="toctree-l2"><a class="reference internal" href="oil.html">Oil Burner Control</a></li>
+<li class="toctree-l2"><a class="reference internal" href="wood.html">Wood Oven Control</a></li>
+<li class="toctree-l2"><a class="reference internal" href="room.html">Room Temperature</a></li>
+<li class="toctree-l2"><a class="reference internal" href="boiler.html">Warm Water</a></li>
+<li class="toctree-l2"><a class="reference internal" href="dbus-objects.html">D-Bus Objects</a></li>
 </ul>
 </li>
 <li class="toctree-l1"><a class="reference internal" href="../simulation/index.html">Running Plant Under Simulation</a></li>
@@ -283,15 +283,15 @@
     
       <li><a href="../../index.html">Docs</a> &raquo;</li>
         
-          <li><a href="index.html">Marketing</a> &raquo;</li>
+          <li><a href="index.html">Components</a> &raquo;</li>
         
-      <li>OpenHeating Presentation Ideas</li>
+      <li>Architectural Overview</li>
     
     
       <li class="wy-breadcrumbs-aside">
         
             
-            <a href="../../_sources/doc/marketing/heating.rst.txt" rel="nofollow"> View page source</a>
+            <a href="../../_sources/doc/components/architecture.rst.txt" rel="nofollow"> View page source</a>
           
         
       </li>
@@ -304,51 +304,16 @@
           <div role="main" class="document" itemscope="itemscope" itemtype="http://schema.org/Article">
            <div itemprop="articleBody">
             
-  <div class="section" id="openheating-presentation-ideas">
-<h1>OpenHeating Presentation Ideas<a class="headerlink" href="#openheating-presentation-ideas" title="Permalink to this headline">¶</a></h1>
-<ul>
-<li><p>Intro</p>
-<ul>
-<li><p>Problem</p></li>
-<li><p>Alternatives</p>
-<ul class="simple">
-<li><p><a class="reference external" href="https://www.ta.co.at/">https://www.ta.co.at/</a></p></li>
-</ul>
-</li>
-<li><p>Why another heating system?</p>
-<p>Pictures of oil burner, wood stove, valve switch, and bloody
-off-the-shelf heating control.</p>
-</li>
-<li><p>Overview of “technologies” used</p>
-<ul class="simple">
-<li><p>{lib,}gpiod</p>
-<ul>
-<li><p>vs. deprecated (why?) sysfs</p></li>
-<li><p>vs. RPi.GPIO &#64;#$%^&amp;*</p></li>
-</ul>
-</li>
-<li><p>systemd</p></li>
-<li><p>D-Bus, pydbus -&gt; “microservices” (management buy-in, especially
-with dbus interfaces defined in XML)</p></li>
-<li><p>ah yes, Python (why not asyncio?)</p></li>
-<li><p>Sensors: DS18x20</p></li>
-</ul>
-</li>
-<li><p>Future</p>
-<ul class="simple">
-<li><p>Interoperate with legacy systems and retro protocols</p>
-<ul>
-<li><p>CAN. For example,
-<a class="reference external" href="https://www.ta.co.at/frei-programmierbar/can-ez3/">https://www.ta.co.at/frei-programmierbar/can-ez3/</a></p></li>
-<li><p>Modbus. For example,
-<a class="reference external" href="https://www.ta.co.at/frei-programmierbar/modbus-m-bus-modul/">https://www.ta.co.at/frei-programmierbar/modbus-m-bus-modul/</a></p></li>
-</ul>
-</li>
-</ul>
-</li>
-</ul>
-</li>
-</ul>
+  <div class="section" id="architectural-overview">
+<h1>Architectural Overview<a class="headerlink" href="#architectural-overview" title="Permalink to this headline">¶</a></h1>
+<div class="admonition-todo admonition" id="id1">
+<p class="admonition-title">Todo</p>
+<p>Polish once there is an architecture :-)</p>
+</div>
+<div class="section" id="polling">
+<span id="arch-polling"></span><h2>Polling<a class="headerlink" href="#polling" title="Permalink to this headline">¶</a></h2>
+<p>…</p>
+</div>
 </div>
 
 
@@ -359,10 +324,10 @@ with dbus interfaces defined in XML)</p></li>
   
     <div class="rst-footer-buttons" role="navigation" aria-label="footer navigation">
       
-        <a href="../misc/index.html" class="btn btn-neutral float-right" title="Miscellaneous Documentation" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right"></span></a>
+        <a href="main.html" class="btn btn-neutral float-right" title="org.openheating.Main" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right"></span></a>
       
       
-        <a href="glt2020/blink/Screenplay.html" class="btn btn-neutral float-left" title="GLT2020 “Blink” Presentation Screenplay" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left"></span> Previous</a>
+        <a href="index.html" class="btn btn-neutral float-left" title="Components" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left"></span> Previous</a>
       
     </div>
   
